# e3doubt

./: .gitmodules  CITATION.cff  README.md  README.rst  TODO.md  e3duncertainty_environment.yml  pyproject.toml
binder/: environment.yml
data/: sites.csv
e3doubt/: __init__.py  analysis_utils.py  experiment.py  geodesy.py  radar_utils.py  utils.py  vectors.py
examples/: 0__inclination_fieldstrength_etc_over_e3d.py  0__inclination_fieldstrength_etc_over_e3d__alternative_layout.py  10__directly_run_parameterErrorEstimatesPrior.py  1__div_and_curl_of_v.py  1__equally_spaced_meas_grid.py  2__convection_uncertainty_w_secs.py  2__convection_uncertainty_w_secs__small_area__uniform_sampling.py  2a__convection_uncertainty_w_secs__large_area__nonuniform_sampling.py  2a__convection_uncertainty_w_secs_zoom.py  3__emwork_uncertainty_w_secs.py  4__errorComparisonEISCAT_sampleVariance.py  5__new_radar_system.py  6__monostatic_radar_system.py  7__degeneracy_of_los_vectors_over_e3d.py  8__E3Dsubarrays.py  9__compare_prior_and_fast_calculations.py  div_and_curl_of_v.py
src/: e3doubt.py  e3duncertainty.py  geodesy.py  radar.py  utils.py  vectors.py
