[build-system]
requires = ["setuptools >= 64", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/Dartspacephysiker/e3doubt"

[project]
name = "e3doubt"
dynamic = ["version"]
authors = [
    { name = "Spencer M. Hatch", email = "spencer.hatch@ift.uib.no" },
]
maintainers = [
    { name = "Spencer M. Hatch", email = "spencer.hatch@ift.uib.no" },
]
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "apexpy >= 1.0",
    "future >= 0.16",
    "iri2016 >= 1.11",
    "matplotlib >= 3.6",
    "numpy >= 1.23",
    "pandas >= 1.5",
    "ppigrf >= 1.0.0",
    "pymsis >= 0.8.0",
    "rpy2 >= 3.5",
    "toolz >= 0.8",
]

[project.optional-dependencies]
test = [
    "pytest >=6",
]
dev = [
    "pytest >=6",
    "Sphinx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]

[tool.setuptools_scm]
